--- a/app/src/main/res/layout/activity_update_trans.xml
+++ b/app/src/main/res/layout/activity_update_trans.xml
@@ -14,27 +14,41 @@
             android:id="@+id/toolbarTongQuan"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:title="Thêm chi tiêu"
+            app:title="Thay đổi chi tiêu"
             app:titleTextColor="@color/colorWhite">
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Khoản tiền:"
+        android:textSize="18sp"
+        android:textColor="@color/colorGreen"/>
     <EditText
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/txtAmountDialog"
+        android:layout_marginTop="5dp"
+        android:id="@+id/txtAmountUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="@drawable/input_outline"
         android:ems="10"
-        android:hint="Khoản tiền ..."
         android:inputType="number"
         android:padding="12dp" />
-
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ghi chú về chi tiêu:"
+        android:textSize="18sp"
+        android:textColor="@color/colorGreen"/>
     <EditText
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
@@ -43,11 +57,17 @@
         android:background="@drawable/input_outline"
         android:padding="12dp"
         android:ems="10"
-        android:id="@+id/txtTranNameDialog"
-        android:hint="Ghi chú ..."
-        android:layout_marginBottom="10dp"/>
-
+        android:id="@+id/txtTranNameUpdate" />
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ngày chi tiêu:"
+        android:textSize="18sp"
+        android:textColor="@color/colorGreen"/>
     <LinearLayout
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
@@ -65,24 +85,32 @@
             android:src="@drawable/ic_today_black_18px" />
 
         <TextView
-            android:id="@+id/txtDateTranDialog"
+            android:id="@+id/txtDateTranUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="12dp"
-            android:text="Chọn ngày ..."
             android:textSize="18sp"
             android:textColor="@color/md_grey_600"/>
     </LinearLayout>
 
+    <TextView
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Loại chi tiêu:"
+        android:textSize="18sp"
+        android:textColor="@color/colorGreen"/>
+
     <FrameLayout
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/input_outline">
         <android.support.v7.widget.AppCompatSpinner
-            android:id="@+id/spinTranType"
+            android:id="@+id/spinTranTypeUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="13dp"
@@ -102,11 +130,11 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="10dp">
         <Button
-            android:text="Thêm"
+            android:text="Thay đổi"
             android:background="@drawable/btn_green"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnThemDialog" android:layout_weight="1"
+            android:id="@+id/btnUpdate" android:layout_weight="1"
             android:textSize="18sp"
             android:textColor="@color/colorWhite"
             android:layout_margin="5dp"/>
@@ -115,7 +143,7 @@
             android:background="@drawable/btn_green"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnThoatDialog"
+            android:id="@+id/btnThoatUpdate"
             android:layout_weight="1"
             android:textSize="18sp"
             android:textColor="@color/colorWhite"
